--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "akh",
     "version": "0.0.0",
-    "description": "Monad and Monad Transformers Collection",
+    "description": "Monad and Monad Transformer Collection",
     "author": "Matt Bierner",
     "license": "MIT",
     "keywords": [
