Removed debugging routines

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "author": "Matt Bierner",
     "license": "MIT",
     "keywords": [
-        "monad"
+        "monad",
+        "monad Transformer",
+        "functional",
+        ""
     ],
     "repository": {
         "type": "git",
